--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,22 @@
     "redirects": [
       {
         "source": "/",
-        "destination": "/landingPage.html",
+        "destination": "/index.html",
         "permanent": true
       }
-    ]
+    ],
+    "rewrites": [
+    {
+      "source": "/",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/contact",
+      "destination": "/contact.html"
+    },
+    {
+      "source": "/projects",
+      "destination": "/projects.html"
+    }
+  ]
   }
